--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -11,7 +11,7 @@
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-left">
+            <ul class="nav navbar-nav navbar-right">
                 {{#foreach navigation}}
                     <li class="nav-link nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
                 {{/foreach}}
